--- a/package.json
+++ b/package.json
@@ -19,19 +19,29 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.1.0",
     "@stripe/stripe-js": "^2.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-sanity": "^7.0.12",
     "react": "^18",
     "react-datepicker": "^4.25.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-tabs": "^6.0.2",
     "stripe": "^14.13.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
